# NeuroCloneModel

./: .gitignore  README.md  constants.py  pyproject.toml
domain/: value_objects.py
domain/entities/: __init__.py  base.py  chat.py  message.py  thread.py
eval/: disentanglement_evaluator.py  load_dataset.py
features/: build_imitation_dataset.py  ingest_chat_export.py  process_chat_threads.py  train_imitation_lora_weights.py  train_lora_adapter.py
features/interfaces/: __init__.py  i_storage.py  i_unit_of_work.py
features/interfaces/repositories/: __init__.py  i_chat.py  i_message.py  i_thread.py
infrastructure/in_memory/: base.py  chat.py  message.py  thread.py
infrastructure/in_memory/repositories/: __init__.py  chat.py  message.py  thread.py
infrastructure/local/: storage.py
llm/: __init__.py  i_inference_engine.py  mlx_engine.py
llm/prompts/: imitation_context.jinja2  thread_decision.jinja2  thread_summary.jinja2
src/: app.py  config.py  dependencies.py  utils.py
src/domain/entities/: __init__.py  chat.py  message.py  user.py
src/eval/: load_dataset.py  main.py
src/exceptions/: base.py
src/exceptions/client/: base.py  malformed_request.py
src/features/: __init__.py  base.py  build_imitation_dataset.py  ingest_chat_export.py  receive_chat_message.py  register_user.py
src/features/interfaces/: __init__.py  i_unit_of_work.py
src/features/interfaces/repositories/: __init__.py  (+5 more)
src/handlers/: __init__.py  start.py
src/infrastructure/in_memory/: uow.py
src/infrastructure/local/: __init__.py
src/llm/prompts/: imitation_context.jinja2
(+5 files in other folders)
