[project]
name = "neuroclonemodel"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "io-23SklyarAnton", email = "80kap.i.toshka@gmail.com" }
]
dependencies = [
    "mlx-lm>=0.31.2",
    "pydantic>=2.13.3",
    "jinja2>=3.1.6",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "aiogram>=3.28.2",
]
readme = "README.md"
requires-python = ">=  3.12.7"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/neuroclonemodel"]
